CSS: Fix image overflow when image is big

--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -1025,9 +1025,11 @@ body {
     -webkit-box-shadow: 0 12px 24px 0 rgb(0 0 0 / 25%);
     box-shadow: 0 12px 24px 0rgba(0,0,0,.25);
 }
-.gl-image img{
+.gl-current-element > *{
     display: block;
     vertical-align: bottom;
+    max-height: 85vh;
+    max-width: 85vw;
     margin: auto;
 }
 .gl-image {
